--- a/src/app/product-detail-page/product-detail-page.component.scss
+++ b/src/app/product-detail-page/product-detail-page.component.scss
@@ -29,6 +29,12 @@
         font-size: 18px;
       }
 
+
+.cheap{
+
+  color: #e61313;
+}
+
       &.button {
         display: flex;
         justify-content: space-between;
