--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -15,9 +15,8 @@
   <span>{{ price() | currency : '$' : 'symbol' : '4.0' }}</span>
 </div>
 <div class="button">
-  <button type="button" (click)="view.emit()">檢視</button>
+  <button type="button" (click)="view.emit()">明細</button>
   <div>
-    <button type="button" class="edit" (click)="edit.emit()">編輯</button>
-    <button type="button" class="remove" (click)="remove.emit()">刪除</button>
-  </div>
+    <button type="button" class="edit" (click)="edit.emit()">加入購物車</button>
+    </div>
 </div>
