--- a/src/app/product-page/product-page.component.scss
+++ b/src/app/product-page/product-page.component.scss
@@ -5,25 +5,25 @@
   .toolbar {
     margin-bottom: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   button {
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: solid 1px #007bff;
     color: #007bff;
     background-color: white;
-    border-radius: 20px;
+    
     cursor: pointer;
   }
 
   input[type='text'] {
-    margin-right: 10px;
+   margin-right: 10px;
     padding: 5px;
     width: 300px;
     height: 30px;
     font-size: 20px;
     border: solid 1px #007bff;
-    border-radius: 10px;
+   
   }
 }
